Resolved issue of background scroll showing side gaps due to default 8px margin

--- a/NewLibrary/styles.css
+++ b/NewLibrary/styles.css
@@ -1,3 +1,6 @@
+body {
+    margin: 0px;
+}
 .titleParent {
     display: flex;
     align-items: center;
